--- a/notebooks/cuminf_bib.bib
+++ b/notebooks/cuminf_bib.bib
@@ -1,4 +1,31 @@
 
+@article{muylaert_threshold_2016,
+	title = {Threshold effect of habitat loss on bat richness in cerrado-forest landscapes},
+	volume = {26},
+	issn = {10510761},
+	url = {http://doi.wiley.com/10.1890/15-1757.1},
+	doi = {10.1890/15-1757.1},
+	abstract = {Understanding how animal groups respond to contemporary habitat loss and fragmentation is essential for development of strategies for species conservation. Until now, there has been no consensus about how landscape degradation affects the diversity and distribution of Neotropical bats. Some studies demonstrate population declines and species loss in impacted areas, although the magnitude and generality of these effects on bat community structure are unclear. Empirical fragmentation thresholds predict an accentuated drop in biodiversity, and species richness in particular, when less than 30\% of the original amount of habitat in the landscape remains. In this study, we tested whether bat species richness demonstrates this threshold response, based on 48 sites distributed across 12 landscapes with 9–88\% remaining forest in Brazilian cerrado-f­orest formations. We also examined the degree to which abundance was similarly affected within four different feeding guilds. The threshold value for richness, below which bat diversity declines precipitously, was estimated at 47\% of remaining forest. To verify if the response of bat abundance to habitat loss differed among feeding guilds, we used a model selection approach based on Akaike’s information criterion. Models accounted for the amount of riparian forest, semideciduous forest, cerrado, tree plantations, secondary forest, and the total amount of forest in the landscape. We demonstrate a nonlinear effect of the contribution of tree plantations to frugivores, and a positive effect of the amount of cerrado to nectarivores and animalivores, the groups that responded most to decreases in amount of forest. We suggest that bat assemblages in interior Atlantic Forest and cerrado regions of southeastern Brazil are impoverished, since we found lower richness and abundance of different groups in landscapes with lower amounts of forest. The relatively higher threshold value of 47\% suggests that bat communities have a relatively lower resistance to habitat degradation than other animal groups. Accordingly, conservation and restoration strategies should focus on increasing the amount of native vegetation of landscapes so as to enhance species richness of bats.},
+	language = {en},
+	number = {6},
+	urldate = {2021-09-23},
+	journal = {Ecological Applications},
+	author = {Muylaert, Renata L. and Stevens, Richard D. and Ribeiro, Milton C.},
+	month = sep,
+	year = {2016},
+	pages = {1854--1867},
+	file = {Muylaert et al. - 2016 - Threshold effect of habitat loss on bat richness i.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\UR5ZC5HZ\\Muylaert et al. - 2016 - Threshold effect of habitat loss on bat richness i.pdf:application/pdf},
+}
+
+@article{davidson_ecological_2020,
+	title = {Ecological insights from three decades of animal movement tracking across a changing {Arctic}},
+	language = {en},
+	author = {Davidson, Sarah C and Bohrer, Gil and Gurarie, Eliezer and LaPoint, Scott and Mahoney, Peter J and Boelman, Natalie T and Eitel, Jan U H and Prugh, Laura R and Vierling, Lee A and Jennewein, Jyoti and Grier, Emma and Couriot, Ophélie and Kelly, Allicia P and Meddens, Arjan J H and Oliver, Ruth Y and Kays, Roland and Wikelski, Martin and Aarvak, Tomas and Ackerman, Joshua T and Alves, José A and Bayne, Erin and Bedrosian, Bryan and Belant, Jerrold L and Berdahl, Andrew M and Berlin, Alicia M and Berteaux, Dominique and Bêty, Joël and Boiko, Dmitrijs and Booms, Travis L and Borg, Bridget L and Boutin, Stan and Boyd, W Sean and Brides, Kane and Brown, Stephen and Bulyuk, Victor N and Burnham, Kurt K and Cabot, David and Casazza, Michael and Christie, Katherine and Craig, Erica H and Davis, Shanti E and Davison, Tracy and Demma, Dominic and DeSorbo, Christopher R and Dixon, Andrew and Domenech, Robert and Eichhorn, Götz and Elliott, Kyle and Evenson, Joseph R and Exo, Klaus-Michael and Ferguson, Steven H and Fiedler, Wolfgang and Fisk, Aaron and Fort, Jérôme and Franke, Alastair and Fuller, Mark R and Garthe, Stefan and Gauthier, Gilles and Gilchrist, Grant and Glazov, Petr and Gray, Carrie E and Grémillet, David and Griffin, Larry and Hallworth, Michael T and Harrison, Autumn-Lynn and Hennin, Holly L and Hipfner, J Mark and Hodson, James and Johnson, James A and Joly, Kyle and Jones, Kimberly and Katzner, Todd E and Kidd, Jeff W and Knight, Elly C and Kochert, Michael N and Kölzsch, Andrea and Kruckenberg, Helmut and Lagassé, Benjamin J and Lai, Sandra and Lamarre, Jean-François and Lanctot, Richard B and Larter, Nicholas C and Latham, A David M and Latty, Christopher J and Lawler, James P and Léandri-Breton, Don-Jean and Lee, Hansoo and Lewis, Stephen B and Love, Oliver P and Madsen, Jesper and Maftei, Mark and Mallory, Mark L and Mangipane, Buck and Markovets, Mikhail Y and Marra, Peter P and McGuire, Rebecca and McIntyre, Carol L and McKinnon, Emily A and Miller, Tricia A and Moonen, Sander and Mu, Tong},
+	year = {2020},
+	pages = {6},
+	file = {Davidson et al. - 2020 - Ecological insights from three decades of animal m.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\Q54GBB7S\\Davidson et al. - 2020 - Ecological insights from three decades of animal m.pdf:application/pdf},
+}
+
 @article{wolfe_response_2000,
 	title = {Response of reindeer and caribou to human activities},
 	volume = {19},
@@ -90,6 +117,21 @@
 	file = {Thurfjell et al. - 2014 - Applications of step-selection functions in ecolog.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\L6W492HU\\Thurfjell et al. - 2014 - Applications of step-selection functions in ecolog.pdf:application/pdf},
 }
 
+@book{burnham_model_2002,
+	address = {New York},
+	edition = {2nd ed},
+	title = {Model selection and multimodel inference: a practical information-theoretic approach},
+	isbn = {978-0-387-95364-9},
+	shorttitle = {Model selection and multimodel inference},
+	language = {en},
+	publisher = {Springer},
+	author = {Burnham, Kenneth P. and Anderson, David Raymond and Burnham, Kenneth P.},
+	year = {2002},
+	note = {OCLC: ocm48557578},
+	keywords = {Biology, Mathematical models, Mathematical statistics},
+	file = {Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\RHKMRKJW\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf;Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\YKFU3WSZ\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf},
+}
+
 @article{fieberg_how_2021,
 	title = {A ‘{How} to’ guide for interpreting parameters in habitat‐selection analyses},
 	volume = {90},
@@ -172,9 +214,46 @@
 	pages = {298--301},
 }
 
+@article{skarin_human_2014,
+	title = {Do human activity and infrastructure disturb domesticated reindeer? {The} need for the reindeer’s perspective},
+	volume = {37},
+	issn = {0722-4060, 1432-2056},
+	shorttitle = {Do human activity and infrastructure disturb domesticated reindeer?},
+	url = {http://link.springer.com/10.1007/s00300-014-1499-5},
+	doi = {10.1007/s00300-014-1499-5},
+	language = {en},
+	number = {7},
+	urldate = {2022-01-06},
+	journal = {Polar Biology},
+	author = {Skarin, Anna and Åhman, Birgitta},
+	month = jul,
+	year = {2014},
+	pages = {1041--1054},
+	file = {Skarin and Åhman - 2014 - Do human activity and infrastructure disturb domes.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\NIAWASJH\\Skarin and Åhman - 2014 - Do human activity and infrastructure disturb domes.pdf:application/pdf},
+}
+
+@article{vistnes_matter_2008,
+	title = {The matter of spatial and temporal scales: a review of reindeer and caribou response to human activity},
+	volume = {31},
+	issn = {0722-4060, 1432-2056},
+	shorttitle = {The matter of spatial and temporal scales},
+	url = {http://link.springer.com/10.1007/s00300-007-0377-9},
+	doi = {10.1007/s00300-007-0377-9},
+	abstract = {Research on impacts of human activity and infrastructure development on reindeer and caribou (Rangifer tarandus) is reviewed in the context of spatial (m to many km) and temporal (min to decades) scales. Before the 1980s, most disturbance studies were behavioral studies of individual animals at local scales, reporting few and shortterm (min to h) impacts within 0–2 km from human activity. Around the mid 1980s, focus shifted to regional-scale landscape studies, reporting that Rangifer reduced the use of areas within 5 km from infrastructure and human activity by 50–95\% for weeks, months or even years and increased use of remaining undisturbed habitat far beyond those distances. The extent could vary with type of disturbance, sex, terrain, season, and sensitivity of herds. Of 85 studies reviewed, 83\% of the regional studies concluded that the impacts of human activity were signiWcant, while only 13\% of the local studies did the same. Accurate assessment of impacts from human activity requires regional-scale studies, a pattern conWrmed in a few long-term (decades) preand post-development studies. Such long-term studies are needed to improve understanding of both temporal and spatial patterns.},
+	language = {en},
+	number = {4},
+	urldate = {2022-01-06},
+	journal = {Polar Biology},
+	author = {Vistnes, Ingunn and Nellemann, Christian},
+	month = mar,
+	year = {2008},
+	pages = {399--407},
+	file = {Vistnes and Nellemann - 2008 - The matter of spatial and temporal scales a revie.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\CRJYDPAX\\Vistnes and Nellemann - 2008 - The matter of spatial and temporal scales a revie.pdf:application/pdf},
+}
+
 @book{gillingham_integration_2016,
 	address = {Cham},
-	title = {The {Integration} {Imperative}},
+	title = {The {Integration} {Imperative}: cumulative environmental, community and health effects of multiple natural resource developments},
 	isbn = {978-3-319-22122-9 978-3-319-22123-6},
 	url = {http://link.springer.com/10.1007/978-3-319-22123-6},
 	language = {en},
@@ -240,12 +319,15 @@
 }
 
 @book{krausman_cumulative_2011,
+	address = {Boca Raton},
+	edition = {1},
 	title = {Cumulative effects in wildlife management: impact mitigation},
 	volume = {49},
 	shorttitle = {Cumulative effects in wildlife management},
 	url = {http://choicereviews.org/review/10.5860/CHOICE.49-5670},
 	language = {en},
 	urldate = {2022-01-07},
+	publisher = {CRC Press},
 	editor = {Krausman, Paul R. and Harris, Lisa K.},
 	year = {2011},
 	file = {2012 - Cumulative effects in wildlife management impact .pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\GZ4BFBTH\\2012 - Cumulative effects in wildlife management impact .pdf:application/pdf},
@@ -341,7 +423,7 @@
 	month = jul,
 	year = {2015},
 	pages = {659--669},
-	file = {Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\LNW55HS7\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf},
+	file = {Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\LNW55HS7\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf;Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\6PZ4CXW9\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf},
 }
 
 @article{skarin_out_2018,
@@ -359,7 +441,7 @@
 	month = oct,
 	year = {2018},
 	pages = {9906--9919},
-	file = {Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf},
+	file = {Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\AQ7NAPK4\\Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document;Skarin_etal_2018_Ecol_Evol_supmat.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\Q2IXYHK2\\Skarin_etal_2018_Ecol_Evol_supmat.pdf:application/pdf;Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf},
 }
 
 @article{sloan_remaining_2014,
@@ -771,12 +853,51 @@
 	file = {Miguet et al. - 2017 - How to quantify a distance‐dependent landscape eff.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\T3DRKZUA\\Miguet et al. - 2017 - How to quantify a distance‐dependent landscape eff.pdf:application/pdf},
 }
 
-@book{terry_m_therneau_modeling_2000,
+@article{miguet_what_2016,
+	title = {What determines the spatial extent of landscape effects on species?},
+	volume = {31},
+	issn = {0921-2973, 1572-9761},
+	url = {http://link.springer.com/10.1007/s10980-015-0314-1},
+	doi = {10.1007/s10980-015-0314-1},
+	abstract = {Methods We propose 14 predictions derived from ﬁve hypotheses explaining what determines the scale of effect, and review the literature (if any) supporting each prediction. These predictions involve ﬁve types of factors: (A) species traits, (B) landscape variables, (C) biological responses (e.g. abundance vs. occurrence), (D) indirect inﬂuences, and (E) regional context of the study. We identify methodological issues that hinder estimation of the scale of effect.
+Results Of the 14 predictions, only nine have been tested empirically and only ﬁve have received some empirical support. Most support is from simulation studies. Empirical evidence usually does not support predictions.
+Conclusions The study of the spatial scale at which landscape variables inﬂuence biological outcomes is in its infancy. We provide directions for future},
+	language = {en},
+	number = {6},
+	urldate = {2022-01-19},
+	journal = {Landscape Ecology},
+	author = {Miguet, Paul and Jackson, Heather B. and Jackson, Nathan D. and Martin, Amanda E. and Fahrig, Lenore},
+	month = aug,
+	year = {2016},
+	pages = {1177--1194},
+	file = {Miguet et al. - 2016 - What determines the spatial extent of landscape ef.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\JFETMBRT\\Miguet et al. - 2016 - What determines the spatial extent of landscape ef.pdf:application/pdf},
+}
+
+@article{huais_multifit_2018,
+	title = {multifit: an {R} function for multi-scale analysis in landscape ecology},
+	volume = {33},
+	issn = {0921-2973, 1572-9761},
+	shorttitle = {multifit},
+	url = {http://link.springer.com/10.1007/s10980-018-0657-5},
+	doi = {10.1007/s10980-018-0657-5},
+	abstract = {Context Multi-scale analyses are a common approach in landscape ecology. Their aim is to ﬁnd the appropriate spatial scale for a particular landscape attribute in order to perform a correct interpretation of results and conclusions.},
+	language = {en},
+	number = {7},
+	urldate = {2022-01-19},
+	journal = {Landscape Ecology},
+	author = {Huais, Pablo Yair},
+	month = jul,
+	year = {2018},
+	pages = {1023--1028},
+	file = {Huais - 2018 - multifit an R function for multi-scale analysis i.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\TMQ4NFKM\\Huais - 2018 - multifit an R function for multi-scale analysis i.pdf:application/pdf},
+}
+
+@book{therneau_modeling_2000,
 	address = {New York},
 	title = {Modeling {Survival} {Data}: {Extending} the {Cox} {Model}},
 	isbn = {0-387-98784-3},
 	publisher = {Springer},
-	author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+	author = {Therneau, Terry M. and Grambsch, Patricia M.},
 	year = {2000},
 }
 
@@ -785,4 +906,123 @@
 	url = {https://CRAN.R-project.org/package=survival},
 	author = {Therneau, Terry M.},
 	year = {2020},
+}
+
+@article{lai_evaluating_2019,
+	title = {Evaluating the popularity of {R} in ecology},
+	volume = {10},
+	issn = {2150-8925, 2150-8925},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ecs2.2567},
+	doi = {10.1002/ecs2.2567},
+	abstract = {The programming language R is widely used in many ﬁelds. We explored the extent of reported R use in the ﬁeld of ecology using the Web of Science and text mining. We analyzed the frequencies of R packages reported in more than 60,000 peer-reviewed articles published in 30 ecology journals during a 10-yr period ending in 2017. The number of studies reported using R as their primary tool in data analysis increased linearly from 11.4\% in 2008 to 58.0\% in 2017. The top 10 packages reported were lme4, vegan, nlme, ape, MuMIn, MASS, mgcv, ade4, multcomp, and car. The increasing popularity of R has most likely furthered open science in ecological research because it can improve reproducibility of analyses and captures workﬂows when scripts and codes are included and shared. These ﬁndings may not be entirely unique to R because there are other programming languages used by ecologists, but they do strongly suggest that given the relatively high frequency of reported use of R, it is a signiﬁcant component of contemporary analytics in the ﬁeld of ecology.},
+	language = {en},
+	number = {1},
+	urldate = {2022-01-20},
+	journal = {Ecosphere},
+	author = {Lai, Jiangshan and Lortie, Christopher J. and Muenchen, Robert A. and Yang, Jian and Ma, Keping},
+	month = jan,
+	year = {2019},
+	file = {Lai et al. - 2019 - Evaluating the popularity of R in ecology.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\468TCNGV\\Lai et al. - 2019 - Evaluating the popularity of R in ecology.pdf:application/pdf},
+}
+
+@incollection{harris_grappling_2011,
+	address = {Boca Raton},
+	edition = {1},
+	title = {Grappling with cumulative effects},
+	language = {en},
+	booktitle = {Cumulative effects in wildlife management: impact mitigation},
+	publisher = {CRC Press},
+	author = {Harris, Lisa K. and Urreiztieta, Lirain F.},
+	editor = {Krausman, Paul R. and Harris, Lisa K.},
+	year = {2011},
+	pages = {3--16},
+}
+
+@article{quinonezpinon_design_2007,
+	title = {Design of an environmental monitoring program using {NDVI} and cumulative effects assessment},
+	volume = {28},
+	issn = {0143-1161, 1366-5901},
+	url = {https://www.tandfonline.com/doi/full/10.1080/01431160600887730},
+	doi = {10.1080/01431160600887730},
+	language = {en},
+	number = {7},
+	urldate = {2022-01-31},
+	journal = {International Journal of Remote Sensing},
+	author = {Quiñonez‐Piñón, R. and Mendoza‐Durán, A. and Valeo, C.},
+	month = apr,
+	year = {2007},
+	pages = {1643--1664},
+	file = {Quiñonez‐Piñón et al. - 2007 - Design of an environmental monitoring program usin.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\FGJFSW49\\Quiñonez‐Piñón et al. - 2007 - Design of an environmental monitoring program usin.pdf:application/pdf},
+}
+
+@incollection{johnson_regulating_2011,
+	address = {Boca Raton},
+	edition = {1},
+	title = {Regulating and planning for cumulative effects: the {Canadian} experience},
+	language = {en},
+	booktitle = {Cumulative effects in wildlife management: impact mitigation},
+	publisher = {CRC Press},
+	author = {Johnson, Chris J.},
+	editor = {Krausman, Paul R. and Harris, Lisa K.},
+	year = {2011},
+	pages = {29--46},
+}
+
+@article{laforge_process-focussed_2015,
+	title = {Process-focussed, multi-grain resource selection functions},
+	volume = {305},
+	issn = {03043800},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304380015000964},
+	doi = {10.1016/j.ecolmodel.2015.03.003},
+	language = {en},
+	urldate = {2022-02-10},
+	journal = {Ecological Modelling},
+	author = {Laforge, Michel P. and Vander Wal, Eric and Brook, Ryan K. and Bayne, Erin M. and McLoughlin, Philip D.},
+	month = jun,
+	year = {2015},
+	pages = {10--21},
+	file = {Laforge et al. - 2015 - Process-focussed, multi-grain resource selection f.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\2CQRG3JS\\Laforge et al. - 2015 - Process-focussed, multi-grain resource selection f.pdf:application/pdf},
+}
+
+@article{evans_physiologic_2013,
+	title = {Physiologic evaluation of medetomidine-ketamine anesthesia in free-ranging {Svalbard} (\textit{{Rangifer} tarandus platyrhynchus}) and wild {Norwegian} {Reindeer} (\textit{{Rangifer} tarandus tarandus})},
+	volume = {49},
+	issn = {0090-3558},
+	url = {http://www.bioone.org/doi/10.7589/2013-03-049},
+	doi = {10.7589/2013-03-049},
+	abstract = {Previously published studies indicated that combinations of medetomidine and ketamine were effective for both Svalbard (Rangifer tarandus platyrhynchus) and wild Norwegian reindeer (Rangifer tarandus tarandus). Both previous studies indicated that reindeer were hypoxemic on the basis of pulse oximetry. We conducted a physiologic evaluation of these two protocols using arterial blood gases. Medetomidine (10 mg) and ketamine (200 mg) were administered by dart from the ground in Svalbard reindeer (October 2010) and from a helicopter for wild reindeer (March 2012). Of tested animals, all seven wild reindeer and five of seven Svalbard reindeer were hypoxemic before oxygen administration. Nasal oxygen insufflation (1 L/min for five Svalbard reindeer and one wild reindeer and 2 L/min for four wild reindeer) corrected hypoxemia in all cases evaluated. For reversal, all animals received 5 mg atipamezole per mg medetomidine intramuscularly.},
+	language = {en},
+	number = {4},
+	urldate = {2022-03-14},
+	journal = {Journal of Wildlife Diseases},
+	author = {Evans, Alina L. and Lian, Marianne and das Neves, Carlos G. and Os, Øystein and Andersen, Roy and Aanes, Ronny and Strand, Olav and Tryland, Morten and Arnemo, Jon M.},
+	month = oct,
+	year = {2013},
+	pages = {1037--1041},
+	file = {Evans et al. - 2013 - Physiologic Evaluation of Medetomidine-Ketamine An.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\FF8BWAUK\\Evans et al. - 2013 - Physiologic Evaluation of Medetomidine-Ketamine An.pdf:application/pdf},
+}
+
+@techreport{johansen_vegetasjonskart_2009,
+	title = {Vegetasjonskart for {Norge} basert på {LANDSAT} {TM}/{ETM}+ data.},
+	language = {no},
+	number = {4},
+	institution = {Northern Research Institute, NORUT},
+	author = {Johansen, Bernt E.},
+	year = {2009},
+	pages = {87},
+	file = {Johansen - VEGETASJONSKART FOR NORGE BASERT PÅ LANDSAT TMETM.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\MDKJ9I52\\Johansen - VEGETASJONSKART FOR NORGE BASERT PÅ LANDSAT TMETM.pdf:application/pdf},
+}
+
+@book{kutner_applied_2005,
+	address = {Boston},
+	edition = {5th ed},
+	series = {The {McGraw}-{Hill}/{Irwin} series operations and decision sciences},
+	title = {Applied linear statistical models},
+	isbn = {978-0-07-238688-2},
+	language = {en},
+	publisher = {McGraw-Hill Irwin},
+	editor = {Kutner, Michael H.},
+	year = {2005},
+	keywords = {Analysis of variance, Experimental design, Linear models (Statistics), Regression analysis, Textbooks},
+	file = {Kutner - 2005 - Applied linear statistical models.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\HBP8UF3M\\Kutner - 2005 - Applied linear statistical models.pdf:application/pdf},
 }
