--- a/notebooks/01_appendixA_additional_equations.Rmd
+++ b/notebooks/01_appendixA_additional_equations.Rmd
@@ -6,9 +6,10 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 geometry: margin=2cm
 abstract: | 
   In this document, we derive the influence of the nearest feature and the cumulative influence of 
-  multiple infrastructure for types of infrastructure and spatial variables that are represented
+  multiple features of an infrastructure for types of infrastructure and spatial variables that are represented
   as lines (e.g. roads, power lines) or polygons (e.g. dams, mining sites). This complements the derivation
-  for point-type infrastructure as presented in Niebuhr et al. *Estimating the cumulative impacts and 
+  for point-type infrastructure as presented in the main text of 
+  Niebuhr et al. *Estimating the cumulative impacts and 
   the zone of influence from multiple anthropogenic infrastructure on biodiversity.*
 bibliography: cuminf_bib.bib
 output:
@@ -20,7 +21,7 @@ toc: yes
 
 # Introduction
 
-In the main text, we derived the estimation of the cumulative influence of multiple infrastructure under different assumptions, but only did so for infrastructure that can be represented as points, such as houses, cabins, or wind turbines. Here we complement it by deriving similar equations for linear infrastructure (e.g. roads, trails, power lines) and infrastructure or landscape variables represented by polygons (mining sites, hydro dams, deforestation areas or polygons outlining specific land cover and land use types).
+In the main text, we derived the estimation of the cumulative influence of multiple infrastructure under different assumptions, but only did so for infrastructure that can be represented as points, such as houses, tourist cabins, or wind turbines. Here we complement it by deriving similar equations for linear infrastructure (e.g. roads, railways, trails, power lines) and infrastructure or landscape variables represented by polygons (e.g. mining sites, hydro dams, deforestation areas or polygons outlining specific land cover and land use types).
 
 # Derivation of influence measures for multiple infrastructure features 
 
@@ -65,7 +66,7 @@ where $\Omega$ is the whole study area.
 
 To estimate the influence of the nearest feature, we showed that, for point-like infrastructure,
 one generally considers $\beta_i = 0$ for all $i > 1$ (where the features are ordered by increasing distance), i.e., only the nearest feature is assumed to influence a given site. We can make equivalent assumptions for linear and area infrastructure by considering only the nearest (orthogonal) segment of linear infrastructure or the closest edge of the closest polygon
-to influence processes in a given location. In such a way, their influence is similar to that of a point. As a consequence, equation 3 from the main text keeps valid to represent the influence of the nearest feature:
+to influence processes in a given location. In such a way, their influence is similar to that of a point. As a consequence, equation 3 from the main text keeps valid to represent the influence of the nearest feature for linear and area variables:
 
 \begin{equation}
 \label{eqn:HSFnearest}
@@ -77,8 +78,7 @@ to influence processes in a given location. In such a way, their influence is si
 
 ## Cumulative influence of multiple features
 
-To derive the cumulative influence, for point-like infrastructure we assumed that all features exert
-the same influence, so that $\beta_1 =\beta_2 = ... = \beta_k = \beta$ for all features. If we do similar assumptions for lines and polygons -- that all infinitesimal segments $dl$ present the same influence over $L$ and that all pieces of area of the polygons present similar influence around them, eq. 4 from the main text remains valid for these types of variables:
+To derive the cumulative influence of multiple features of an infrastructure type, for point-like infrastructure we assumed that all features exert the same influence, so that $\beta_1 =\beta_2 = ... = \beta_k = \beta$ for all features. If we do similar assumptions for lines and polygons -- that all infinitesimal segments $dl$ present the same influence over $L$ and that all pieces of area of the polygons present similar influence around them, eq. 4 from the main text remains valid for these types of variables:
 
 \begin{equation}
 \label{eqn:HSFcuminf}
@@ -87,20 +87,17 @@ the same influence, so that $\beta_1 =\beta_2 = ... = \beta_k = \beta$ for all f
                 & = \beta_k \phi_{cum_k} \\
                 & \text{and} \\
     \beta_k X_k & = \beta_k \iint_{\Omega} \phi_{k}(x, y) \ dx \ dy \\
-                & = \beta_k \phi_{cum_k}
+                & = \beta_k \phi_{cum_k}.
 \end{split}
 \end{equation}
 
-The only difference here regards how the cumulative influence function $\phi_{cum}$ is defined -- as a sum or an integral over 1 or 2 dimensions. 
+The only difference here regards how the cumulative influence function $\phi_{cum}$ is defined -- as a summation for point infrastructure (eq. 4 in the main text) or an integral over 1 or 2 dimensions for linear and area infrastructure (eq. 6). 
 
-# Calculation of the cumulative influence
+# Computation of the cumulative influence
 
-In theory, the calculation of the cumulative influence function $\phi_{cum}$ for a given study area $\Omega$ requires the computation of eq. 4 from the main text or eq. \ref{eqn:HSFcuminf}, 
-which might be 
-difficult and computationally challenging for large areas with many infrastructure features spread non-regularly in space. To overcome that limitation, we implemented this calculation by constructing filters (or weighing matrices; see Miguet et al., 2017) that follow an assumed decaying function (see the functions in Fig. 1 of the main text for examples) and used them on moving window/neighborhood analyses over the input infrastructure layers. This is similar to the approaches presented by Miguet et al. (2017) and Gilleland (2013). We do not show it here, but, if the filter is set appropriately to include most of the area within which the influence function is positive (e.g. larger than 0.05 or 0.01), the result of applying eq. 4 or eq. \ref{eqn:HSFcuminf} presents a correlation $> 0.99$ with the 
-result of the neighborhood analysis.
+In theory, the calculation of the cumulative influence function $\phi_{cum}$ for a given study area $\Omega$ requires the computation of eq. 4 from the main text or eq. 6,which might be difficult and computationally challenging for large areas with many infrastructure features spread non-regularly in space. To overcome that limitation, we implemented this calculation by constructing filters (or weighing matrices; see Miguet et al., 2017) that follow an assumed decaying function (see the functions in Fig. 1 of the main text for examples) and used them on moving window/neighborhood analyses over the input infrastructure layers (see Appendix D for an illustration of how this approach is applied). This is similar to the approaches presented by Miguet et al. (2017) and Gilleland (2013). Even though we do not demonstrate it here, if the filter is set appropriately to include most of the area within which the influence function is positive (e.g. larger than 0.05 or 0.01), the result of applying eq. 4 of the main text or eq. 6 presents a correlation $> 0.99$ with the result of the neighborhood analysis.
 
-**Should I demonstrate it here for examples such as the ones in Appendix B?**
+<!-- **Should I demonstrate it here for examples such as the ones in Appendix B?** -->
 
 # References
 
@@ -108,5 +105,5 @@ Fieberg, J., Signer, J., Smith, B., & Avgar, T. (2021). A 'How to' guide for int
 
 Gilleland, E. (2013). Two-dimensional kernel smoothing: Using the R package smoothie. NCAR Technical Note, TN-502+STR, 17pp. https://doi.org/10.5065/D61834G2
 
-Miguet, P., Fahrig, L., & Lavigne, C. (2017). How to quantify a distance‐dependent landscape effect on a biological response. Methods in Ecology and Evolution, 8(12), 1717–1724. https://doi.org/10.1111/2041-210X.12830
+Miguet, P., Fahrig, L., & Lavigne, C. (2017). How to quantify a distance‐dependent landscape effect on a biological response. Methods in Ecology and Evolution, 8(12), 1717--1724. https://doi.org/10.1111/2041-210X.12830
 
