moved old R scripts to notebooks/old

--- a/notebooks/02_nearest_vs_cuminf_bartlett_raw.Rmd
+++ b/notebooks/02_nearest_vs_cuminf_bartlett_raw.Rmd
@@ -43,7 +43,7 @@ palette(ninaPalette())
 
 Influence: Bartlett
 
-```{r load_packages, message=FALSE, warning=FALSE}
+```{r load_packages, echo=FALSE, message=FALSE, warning=FALSE}
 #Load packages
 
 # data manipulation
